apps/base/kubelinks/components/gw/reference-grant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: kubelinks-gateway-reference-grant-secret
  namespace: envoy-gateway-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: kubelinks
  to:
    - group: ""
      kind: Secret
