apps/base/kubelinks/components/gw/gw.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kubelinks-gateway
  namespace: kubelinks
spec:
  gatewayClassName: merged-eg
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 8080
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: Same
      name: https
      port: 8443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: localhost-direct
            namespace: envoy-gateway-system
        mode: Terminate
