apps/base/kubelinks/components/gw/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubelinks-route
  namespace: kubelinks
spec:
  parentRefs:
    - name: shared-gateway
      namespace: envoy-gateway-system
  hostnames:
    - links.${cluster_subdomain}
  rules:
    - backendRefs:
        - name: kubelinks
          port: 80
          weight: 1
